added environment file

--- a/1.3_data_processing.ipynb
+++ b/1.3_data_processing.ipynb
@@ -1954,8 +1954,8 @@
    "id": "3db8be2d-1abe-4883-96ad-c6ca6cb35e2b",
    "metadata": {},
    "source": [
-    "# Imputing\n",
-    "Different strategy for different things"
+    "# Basic Imputing\n",
+    "Different strategy for different features"
    ]
   },
   {
